first edits to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Training</title>
+  <title>personal website</title>
   <!-- meta -->
   <meta charset="utf-8" />
   <meta name="description" content="Personal Site">
@@ -19,7 +19,8 @@
 </head>
 <body>
   <div id="page-wrapper">
-    <h1>My Personal Page!</h1>
+    <h1>Tina Parija</h1>
+    <img src="https://78.media.tumblr.com/9c0d59221227292e41788dd0ff08a968/tumblr_o65unmGbaD1uowbreo1_1280.jpg" alt ="site image">
   </div>
 </body>
 </html>
