--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head>
 <body>
   <div id="page-wrapper">
-    <h1>My Personal Page!</h1>
+    <h1>Adam Menard</h1>
+    <img src="/users/adam/Downloads/adamT.jpg">
   </div>
 </body>
 </html>
