added js file + minor other

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Training</title>
+  <title>Developer: Adam Menard</title>
   <!-- meta -->
   <meta charset="utf-8" />
   <meta name="description" content="Personal Site">
@@ -16,11 +16,16 @@
   <script type="text/javascript" src="assets/js/app.js"></script>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
+
+
 </head>
 <body>
+
   <div id="page-wrapper">
     <h1>Adam Menard</h1>
     <img src="/users/adam/Downloads/adamT.jpg">
   </div>
+
+
 </body>
 </html>
