updates to portfolio

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,6 @@
   <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
 
-
   <!-- favicon -->
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
 </head>
@@ -26,13 +25,10 @@
     <li id="nav-2"><a href="projects.html"> Projects</a></li>
   </nav>
   <section class = "content">
-    <h1>Hello!</h1>
-    <p>I'm a software developer in the bay area. In past lives, I've been a management/economic consultant, a writer, a teacher and a Berkeley/Haas student. </p>
-
-    <a href="mailto:tinaparija@gmail.com" target="_blank">Email</a>
-    <a href="https://www.linkedin.com/in/tinaparija" target="_blank">LinkedIn</a>
-    <a href="https://github.com/tinaparija" target="_blank">GitHub</a>
-
+    <section id = "project-container">
+      
+    </section>
+   
   </section>
 </body>
 </html>
