first draft for rev iew

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 
 <div class="dropdown">
   <!-- button 1 -->
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Main
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a class="dropdown-item" href="#">Action</a>
@@ -50,8 +49,7 @@
     <a class="dropdown-item" href="#">Something else here</a>
   </div>
   <!-- button 2 -->
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Interesting facts
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a class="dropdown-item" href="#">Action</a>
@@ -60,8 +58,7 @@
   </div>
 
   <!-- button 3 -->
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Try something New
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a class="dropdown-item" href="#">Action</a>
@@ -95,20 +92,22 @@
 
 <!-- 3 projects -->
 <div class ="container">
-  <div>
-    <a href="https://www.linkedin.com/in/findadammenard888/" target="_blank">Project 1: Meet Adam</a>
+  <div class="project-container">
+    <a class="project-name" href="https://www.linkedin.com/in/findadammenard888/" target="_blank">Project 1: Meet Adam</a>
   </div>
 
-  <div>
-    <a href="https://www.moma.org/calendar/exhibitions/1219" target="_blank">Project 2: Adam's Inspirations</a>
+  <div class="project-container">
+    <a class="project-name" href="https://www.moma.org/calendar/exhibitions/1219" target="_blank">Project 2: Adam's Inspirations</a>
   </div>
 
-  <div>
-    <a href="http://www.fromageslaurentdubois.fr/fr/" target="_blank">Project 3: Adam's Adventures</a>
+  <div class="project-container">
+    <a class="project-name" href="http://www.fromageslaurentdubois.fr/fr/" target="_blank">Project 3: Adam's Adventures</a>
   </div>
 
 </div>
 
+
+<p id="ghost">Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area Blank area></p>
 
 </body>
 </html>
